--- a/_config.yml
+++ b/_config.yml
@@ -20,16 +20,16 @@ defaults:
       
       
 author:
-  name   : "Bicicleta"
-  avatar : "img/bicicleta.png"
-  bio    : "Vocabulario para la representación de datos sobre el sistema de bicicleta pública."
+  name   : "Padrón municipal: población"
+  avatar : "img/padron.png"
+  bio    : "Vocabulario para la representación de datos del padrón de habitantes"
   links:
     - label: "Página web"
       icon: "fas fa-fw fa-link"
-      url: "http://vocab.ciudadesabiertas.es/def/transporte/bicicleta-publica/doc/index-es.html"
+      url: "http://vocab.ciudadesabiertas.es/def/demografia/padron-municipal/index-es.html"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      url: "https://github.com/CiudadesAbiertas/vocab-transporte-bicicleta-publica"
+      url: "https://github.com/opencitydata/vocab-demografia-padron-municipal"
 
 
 
